--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,5 +1,5 @@
 :root {
-  --branding-color: #c1dfc4 0%;
+  --brading-color: #c1dfc4 0%;
   --secondary-color: #deecdd 100%;
   --heading-font-family: Mulish, sans-serif;
   --default-font-family: Figtree, sans-serif;
@@ -31,7 +31,7 @@ p {
 }
 
 .btn-branding {
-  background: var(--branding-color);
+  background: var(--brading-color);
   border-radius: 5px;
   color: black;
   font-size: 20px;
