--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -8,11 +8,22 @@ h1 {
   font-family: var(--heading-font-family);
   font-weight: bold;
   font-size: 50px;
-  padding: 100px 20px;
+  padding: 60px 5px;
+}
+h2 {
+  font-size: 65px;
 }
 p {
   font-family: var(--heading-font-family);
   font-weight: lighter;
+  font-size: 18px;
+  line-height: 20px;
+}
+.p-hero {
+  font-family: var(--heading-font-family);
+  font-weight: lighter;
+  font-size: 15px;
+  line-height: 40px;
 }
 .hero {
   background: var(--secondary-color);
@@ -34,10 +45,30 @@ p {
   border: 1px solid;
 }
 .btn-branding {
-  background: var(--branding-color);
+  background-color: var(--branding-color);
   border-radius: 5px;
   color: black;
   font-size: 20px;
   line-height: 25px;
   padding: 15px 30px;
+}
+.btn-branding-outline {
+  background-color: var(--branding-color);
+  border-radius: 1px solid;
+  color: black;
+  font-size: 20px;
+  line-height: 25px;
+  padding: 15px 30px;
+}
+.project-description {
+  padding: 40px 5px;
+}
+@media (max-width: 900px) {
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+}
+.text-center {
+  padding: 30px 2px;
 }
