--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -30,6 +30,10 @@ p {
   text-align: center;
   padding: 150px 20px;
 }
+.container {
+  background: var(--secondary-color);
+  text-align: center;
+}
 
 .hero h2 {
   font-family: var(--heading-font-family);
@@ -54,7 +58,7 @@ p {
 }
 .btn-branding-outline {
   background-color: var(--branding-color);
-  border-radius: 1px solid;
+  border-radius: 5px solid;
   color: black;
   font-size: 20px;
   line-height: 25px;
