--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -101,3 +101,12 @@ p {
 .image-about {
   padding: 50px 5px;
 }
+.form-container {
+  max-width: 700px;
+  padding: 5px 10px 5px;
+  border-color: black;
+  border-radius: 5px;
+  border-style: solid;
+  text-align: center;
+  vertical-align: middle;
+}
