Update Active Link Color

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -137,7 +137,7 @@ nav a {
 }
 nav a:hover,
 nav li.active a {
-  color: var(--secondary-color);
+  color: var(--branding-color);
   transition: all 100ems ease-in-out;
 }
 footer {
